--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <header class="container mx-auto mt-8">
         <div class="flex flex-col gap-4 lg:flex-row lg:justify-between items-center">
             <div class="px-8">
-                <h3 class="text-6xl font-bold">It's good <br>
+                <h3 class="text-6xl font-bold text-black">It's good <br>
                     tea time at The <br> Tea House</h3>
                 <p class="opacity-70 py-6">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste
                     Buds.</p>
@@ -58,12 +58,36 @@
             </div>
         </div>
     </header>
-    <main>
-        <div>
-            <div>
-                
+    <main class="container mx-auto">
+        <div class="mt-20">
+            <div class="space-y-4">
+                <h3 class="text-4xl text-black font-extrabold text-center">Our Featured Products</h3>
+                <p class="opacity-75 lg:w-[900px] text-center mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
             </div>
-            <div></div>
+           <div class="flex justify-center">
+            <div class="flex lg:flex-row flex-col gap-6 mt-12">
+                <div class="w-64 bg-gray-100 shadow-lg p-7">
+                    <img class="mx-auto" src="./images/tea-1.png" alt="">
+                    <h3 class="text-2xl font-bold text-center">Milk Tea</h3>
+                    <p class="opcity-75 text-center">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="w-64 bg-gray-100 shadow-lg p-7">
+                    <img class="mx-auto" src="./images/tea-2.png" alt="">
+                    <h3 class="text-2xl font-bold text-center">Black Tea</h3>
+                    <p class="opcity-75 text-center">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="w-64 bg-gray-100 shadow-lg p-7">
+                    <img class="mx-auto" src="./images/tea-3.png" alt="">
+                    <h3 class="text-2xl font-bold text-center">Lemon Tea</h3>
+                    <p class="opcity-75 text-center">Creamer could be replaced by fresh milk</p>
+                </div>
+                <div class="w-64 bg-gray-100 shadow-lg p-7">
+                    <img class="mx-auto" src="./images/tea-4.png" alt="">
+                    <h3 class="text-2xl font-bold text-center">Green Tea</h3>
+                    <p class="opcity-75 text-center">Creamer could be replaced by fresh milk</p>
+                </div>
+            </div>
+           </div>
         </div>
     </main>
     <footer>
