--- a/index.html
+++ b/index.html
@@ -62,33 +62,61 @@
         <div class="mt-20">
             <div class="space-y-4">
                 <h3 class="text-4xl text-black font-extrabold text-center">Our Featured Products</h3>
-                <p class="opacity-75 lg:w-[900px] text-center mx-auto">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                <p class="opacity-75 lg:w-[900px] text-center mx-auto">There are many variations of passages of Lorem
+                    Ipsum available, but the majority have suffered alteration in some form, by injected humour, or
+                    randomised words which don't look even slightly believable. </p>
             </div>
-           <div class="flex justify-center">
-            <div class="flex lg:flex-row flex-col gap-6 mt-12">
-                <div class="w-64 bg-gray-100 shadow-lg p-7">
-                    <img class="mx-auto" src="./images/tea-1.png" alt="">
-                    <h3 class="text-2xl font-bold text-center">Milk Tea</h3>
-                    <p class="opcity-75 text-center">Creamer could be replaced by fresh milk</p>
-                </div>
-                <div class="w-64 bg-gray-100 shadow-lg p-7">
-                    <img class="mx-auto" src="./images/tea-2.png" alt="">
-                    <h3 class="text-2xl font-bold text-center">Black Tea</h3>
-                    <p class="opcity-75 text-center">Creamer could be replaced by fresh milk</p>
-                </div>
-                <div class="w-64 bg-gray-100 shadow-lg p-7">
-                    <img class="mx-auto" src="./images/tea-3.png" alt="">
-                    <h3 class="text-2xl font-bold text-center">Lemon Tea</h3>
-                    <p class="opcity-75 text-center">Creamer could be replaced by fresh milk</p>
-                </div>
-                <div class="w-64 bg-gray-100 shadow-lg p-7">
-                    <img class="mx-auto" src="./images/tea-4.png" alt="">
-                    <h3 class="text-2xl font-bold text-center">Green Tea</h3>
-                    <p class="opcity-75 text-center">Creamer could be replaced by fresh milk</p>
+            <div class="flex justify-center">
+                <div class="flex lg:flex-row flex-col gap-6 mt-12">
+                    <div class="w-64 bg-gray-100 shadow-lg p-7">
+                        <img class="mx-auto" src="./images/tea-1.png" alt="">
+                        <h3 class="text-2xl font-bold text-center">Milk Tea</h3>
+                        <p class="opcity-75 text-center">Creamer could be replaced by fresh milk</p>
+                    </div>
+                    <div class="w-64 bg-gray-100 shadow-lg p-7">
+                        <img class="mx-auto" src="./images/tea-2.png" alt="">
+                        <h3 class="text-2xl font-bold text-center">Black Tea</h3>
+                        <p class="opcity-75 text-center">Creamer could be replaced by fresh milk</p>
+                    </div>
+                    <div class="w-64 bg-gray-100 shadow-lg p-7">
+                        <img class="mx-auto" src="./images/tea-3.png" alt="">
+                        <h3 class="text-2xl font-bold text-center">Lemon Tea</h3>
+                        <p class="opcity-75 text-center">Creamer could be replaced by fresh milk</p>
+                    </div>
+                    <div class="w-64 bg-gray-100 shadow-lg p-7">
+                        <img class="mx-auto" src="./images/tea-4.png" alt="">
+                        <h3 class="text-2xl font-bold text-center">Green Tea</h3>
+                        <p class="opcity-75 text-center">Creamer could be replaced by fresh milk</p>
+                    </div>
                 </div>
             </div>
-           </div>
         </div>
+        <!-- grid section -->
+        <section>
+            <div>
+                <div>
+                    <div>
+                        <div class="w-80 h-80 bg-gradient-to-tr from-red-100 to bg-yellow-50"></div>
+                        <div><img class="w-auto h-auto" src="./images/fresh-1.png" alt=""></div>
+                        <div></div>
+                        <div><img class="w-auto h-auto" src="./images/fresh-2.png" alt=""></div>
+                    </div>
+                </div>
+                <div class="">
+                    <h3 class="text-4xl font-extrabold text-black pb-5">Great Tea, Freshly Presented</h3>
+                    <p class="opacity-75 pb-8">The meaning of gong cha is chanese is to provide the best tea to emperor
+                        from all possessions . It represents the highest quality and self expectation. Establishing in
+                        2006, Gong cha had been deeply appreciated by its custoers because of good words of mouth and
+                        unique customized service orginated from Taiwan.</p>
+                    <h3 class="font-bold text-xl pb-2">Unique Taste</h3>
+                    <p class="opacity-75 pb-5">A Unique and different style from other teapots gives a luxurious and
+                        minimalist impression</p>
+                    <h3 class="font-bold text-xl pb-2">Premium Quality</h3>
+                    <p class="opacity-75">Premium Quality that makes tea more elegant and more durable when you use it.
+                    </p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
