grid added and made responsive

--- a/index.html
+++ b/index.html
@@ -67,23 +67,23 @@
                     randomised words which don't look even slightly believable. </p>
             </div>
             <div class="flex justify-center">
-                <div class="flex lg:flex-row flex-col gap-6 mt-12">
-                    <div class="w-64 bg-gray-100 shadow-lg p-7">
+                <div class="flex lg:flex-row flex-col gap-8 mt-12">
+                    <div class="w-80 bg-gray-100 shadow-lg p-9 space-y-3">
                         <img class="mx-auto" src="./images/tea-1.png" alt="">
                         <h3 class="text-2xl font-bold text-center">Milk Tea</h3>
                         <p class="opcity-75 text-center">Creamer could be replaced by fresh milk</p>
                     </div>
-                    <div class="w-64 bg-gray-100 shadow-lg p-7">
+                    <div class="w-80 bg-gray-100 shadow-lg p-9 space-y-3">
                         <img class="mx-auto" src="./images/tea-2.png" alt="">
                         <h3 class="text-2xl font-bold text-center">Black Tea</h3>
                         <p class="opcity-75 text-center">Creamer could be replaced by fresh milk</p>
                     </div>
-                    <div class="w-64 bg-gray-100 shadow-lg p-7">
+                    <div class="w-80 bg-gray-100 shadow-lg p-9 space-y-3">
                         <img class="mx-auto" src="./images/tea-3.png" alt="">
                         <h3 class="text-2xl font-bold text-center">Lemon Tea</h3>
                         <p class="opcity-75 text-center">Creamer could be replaced by fresh milk</p>
                     </div>
-                    <div class="w-64 bg-gray-100 shadow-lg p-7">
+                    <div class="w-80 bg-gray-100 shadow-lg p-9 space-y-3">
                         <img class="mx-auto" src="./images/tea-4.png" alt="">
                         <h3 class="text-2xl font-bold text-center">Green Tea</h3>
                         <p class="opcity-75 text-center">Creamer could be replaced by fresh milk</p>
@@ -92,18 +92,22 @@
             </div>
         </div>
         <!-- grid section -->
-        <section>
-            <div>
-                <div>
-                    <div>
-                        <div class="w-80 h-80 bg-gradient-to-tr from-red-100 to bg-yellow-50"></div>
-                        <div><img class="w-auto h-auto" src="./images/fresh-1.png" alt=""></div>
-                        <div></div>
-                        <div><img class="w-auto h-auto" src="./images/fresh-2.png" alt=""></div>
+        <section class="mt-28">
+            <div class="flex gap-20 items-center lg:flex-row flex-col">
+                <div class="flex-1">
+                    <div class="grid grid-cols-1 lg:grid-cols-2 gap-6">
+                        <div class="bg-gradient-to-tr from-red-100 to bg-yellow-50 h-36 rounded-xl"></div>
+                        <div
+                            class=" bg-gradient-to-tr from-red-50 to-yellow-100 row-span-2 h-[355px] flex items-center rounded-xl">
+                            <img class="w-auto h-auto mx-auto" src="./images/fresh-1.png" alt=""></div>
+                        <div
+                            class=" bg-gradient-to-tr from-gray-300 to-slate-200 row-span-2 h-[355px] flex items-center rounded-xl">
+                            <img class="w-auto h-auto mx-auto" src="./images/fresh-2.png" alt=""></div>
+                        <div class="bg-gradient-to-tr from-gray-300 to-slate-200 h-36 rounded-xl"></div>
                     </div>
                 </div>
-                <div class="">
-                    <h3 class="text-4xl font-extrabold text-black pb-5">Great Tea, Freshly Presented</h3>
+                <div class="flex-1 px-10">
+                    <h3 class="text-4xl font-extrabold text-black pb-5">Great Tea, Freshly <br> Presented</h3>
                     <p class="opacity-75 pb-8">The meaning of gong cha is chanese is to provide the best tea to emperor
                         from all possessions . It represents the highest quality and self expectation. Establishing in
                         2006, Gong cha had been deeply appreciated by its custoers because of good words of mouth and
