need to make responsive the client review section

--- a/index.html
+++ b/index.html
@@ -121,6 +121,46 @@
                 </div>
             </div>
         </section>
+        <section class=" mt-28 container mx-auto hidden lg:flex lg:flex-row flex-col bg-gradient-to-r from-end to-prior lg:h-[650px] rounded-lg ">
+            <div class="flex lg:flex-row flex-col gap-36 items-center p-16">
+                <div class="space-y-7 text-white flex-1 ">
+                    <h3 class=" text-3xl font-bold">Meet Our Super Clients</h3>
+                    <p class="opacity-75">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                    <button class="btn bg-white text-xl">Show All</button>
+                </div>
+                <div class="flex-1 relative lg:-translate-y-10 ">
+                    <div class="lg:w-96 lg:h-48 bg-white shadow-xl p-11 absolute z-30 rounded-xl ">
+                        <p class="opacity-75 pb-4">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                        <h3 class="text-xl font-bold">Ilham Yuda</h3>
+                        <p class="opacity-75">Businessman</p>
+                        <div class="absolute bottom-[155px] -left-5 "><img class="mx-auto rounded-full shadow-2xl" src="./images/client.png" alt=""></div>
+                    </div> 
+                    <div class="lg:w-96 lg:h-44 bg-white shadow-xl p-8 absolute -bottom-12 lg:left-40 z-20 opacity-60 rounded-xl ">
+                        <p class="opacity-75 pb-4">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                        <h3 class="text-xl font-bold">Ilham Yuda</h3>
+                        <p class="opacity-75">Businessman</p>
+                        <div class="absolute bottom-[155px] -left-5 "><img class="mx-auto rounded-full shadow-2xl" src="./images/client.png" alt=""></div>
+                    </div>
+                    <div class="lg:w-96 lg:h-44 bg-white shadow-xl p-8 absolute top-20 z-10 lg:left-40 opacity-60 rounded-xl">
+                        <p class="opacity-75 pb-4">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                        <h3 class="text-xl font-bold">Ilham Yuda</h3>
+                        <p class="opacity-75">Businessman</p>
+                        <div class="absolute bottom-[155px] -left-5 "><img class="mx-auto rounded-full shadow-2xl " src="./images/client.png" alt=""></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- <section>
+            <div>
+                <h3 class="text-black text-4xl font-bold">News & Events</h3>
+                <p class="opacity-90">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+            </div>
+            <div>
+                <div>
+                    <figure><img src="./new" alt=""></figure>
+                </div>
+            </div>
+        </section> -->
     </main>
     <footer>
 
