added news section without fixing client review sections responsiveness

--- a/index.html
+++ b/index.html
@@ -150,17 +150,35 @@
                 </div>
             </div>
         </section>
-        <!-- <section>
-            <div>
+        <section class="mt-40">
+            <div class="mx-auto text-center space-y-3 lg:w-[900px]">
                 <h3 class="text-black text-4xl font-bold">News & Events</h3>
                 <p class="opacity-90">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
             </div>
-            <div>
-                <div>
-                    <figure><img src="./new" alt=""></figure>
+            <div class="flex lg:flex-row flex-col justify-around mt-8">
+                <div class="space-y-2 p-4 shadow-xl rounded-2xl">
+                    <figure><img  class="w-full" src="./images/news-1.png" alt=""></figure>
+                    <figcaption>Feb 05,2027</figcaption>
+                    <h3 class="text-xl font-bold">Collecting 8 points for discount</h3>
+                    <p class="opacity-80">There are many variations of passages of Lorem Ipsum available.</p>
+                    <p class="font-bold">Learn More</p>
+                </div>
+                <div class="space-y-2 p-4 shadow-xl  rounded-2xl">
+                    <figure><img class="w-full" src="./images/news-2.png" alt=""></figure>
+                    <figcaption>Feb 05,2027</figcaption>
+                    <h3 class="text-xl font-bold">Collecting 8 points for discount</h3>
+                    <p class="opacity-80">There are many variations of passages of Lorem Ipsum available.</p>
+                    <p class="font-bold">Learn More</p>
+                </div>
+                <div class="space-y-2 p-4 shadow-xl rounded-2xl">
+                    <figure><img class="w-full" src="./images/news-3.png" alt=""></figure>
+                    <figcaption>Feb 05,2027</figcaption>
+                    <h3 class="text-xl font-bold">Collecting 8 points for discount</h3>
+                    <p class="opacity-80">There are many variations of passages of Lorem Ipsum available.</p>
+                    <p class="font-bold">Learn More</p>
                 </div>
             </div>
-        </section> -->
+        </section>
     </main>
     <footer>
 
