added footer without fixing client's review section's responsiveness

--- a/index.html
+++ b/index.html
@@ -99,10 +99,12 @@
                         <div class="bg-gradient-to-tr from-red-100 to bg-yellow-50 h-36 rounded-xl"></div>
                         <div
                             class=" bg-gradient-to-tr from-red-50 to-yellow-100 row-span-2 h-[355px] flex items-center rounded-xl">
-                            <img class="w-auto h-auto mx-auto" src="./images/fresh-1.png" alt=""></div>
+                            <img class="w-auto h-auto mx-auto" src="./images/fresh-1.png" alt="">
+                        </div>
                         <div
                             class=" bg-gradient-to-tr from-gray-300 to-slate-200 row-span-2 h-[355px] flex items-center rounded-xl">
-                            <img class="w-auto h-auto mx-auto" src="./images/fresh-2.png" alt=""></div>
+                            <img class="w-auto h-auto mx-auto" src="./images/fresh-2.png" alt="">
+                        </div>
                         <div class="bg-gradient-to-tr from-gray-300 to-slate-200 h-36 rounded-xl"></div>
                     </div>
                 </div>
@@ -121,31 +123,42 @@
                 </div>
             </div>
         </section>
-        <section class=" mt-28 container mx-auto hidden lg:flex lg:flex-row flex-col bg-gradient-to-r from-end to-prior lg:h-[650px] rounded-lg ">
+        <section
+            class=" mt-28 container mx-auto hidden lg:flex lg:flex-row flex-col bg-gradient-to-r from-end to-prior lg:h-[650px] rounded-lg ">
             <div class="flex lg:flex-row flex-col gap-36 items-center p-16">
                 <div class="space-y-7 text-white flex-1 ">
                     <h3 class=" text-3xl font-bold">Meet Our Super Clients</h3>
-                    <p class="opacity-75">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                    <p class="opacity-75">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised words which
+                        don't look even slightly believable. </p>
                     <button class="btn bg-white text-xl">Show All</button>
                 </div>
                 <div class="flex-1 relative lg:-translate-y-10 ">
                     <div class="lg:w-96 lg:h-48 bg-white shadow-xl p-11 absolute z-30 rounded-xl ">
-                        <p class="opacity-75 pb-4">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                        <p class="opacity-75 pb-4">We are providing the best and suitable home insurance services for
+                            the people who are interested to treatment</p>
                         <h3 class="text-xl font-bold">Ilham Yuda</h3>
                         <p class="opacity-75">Businessman</p>
-                        <div class="absolute bottom-[155px] -left-5 "><img class="mx-auto rounded-full shadow-2xl" src="./images/client.png" alt=""></div>
-                    </div> 
-                    <div class="lg:w-96 lg:h-44 bg-white shadow-xl p-8 absolute -bottom-12 lg:left-40 z-20 opacity-60 rounded-xl ">
-                        <p class="opacity-75 pb-4">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
-                        <h3 class="text-xl font-bold">Ilham Yuda</h3>
-                        <p class="opacity-75">Businessman</p>
-                        <div class="absolute bottom-[155px] -left-5 "><img class="mx-auto rounded-full shadow-2xl" src="./images/client.png" alt=""></div>
+                        <div class="absolute bottom-[155px] -left-5 "><img class="mx-auto rounded-full shadow-2xl"
+                                src="./images/client.png" alt=""></div>
                     </div>
-                    <div class="lg:w-96 lg:h-44 bg-white shadow-xl p-8 absolute top-20 z-10 lg:left-40 opacity-60 rounded-xl">
-                        <p class="opacity-75 pb-4">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+                    <div
+                        class="lg:w-96 lg:h-44 bg-white shadow-xl p-8 absolute -bottom-12 lg:left-40 z-20 opacity-60 rounded-xl ">
+                        <p class="opacity-75 pb-4">We are providing the best and suitable home insurance services for
+                            the people who are interested to treatment</p>
                         <h3 class="text-xl font-bold">Ilham Yuda</h3>
                         <p class="opacity-75">Businessman</p>
-                        <div class="absolute bottom-[155px] -left-5 "><img class="mx-auto rounded-full shadow-2xl " src="./images/client.png" alt=""></div>
+                        <div class="absolute bottom-[155px] -left-5 "><img class="mx-auto rounded-full shadow-2xl"
+                                src="./images/client.png" alt=""></div>
+                    </div>
+                    <div
+                        class="lg:w-96 lg:h-44 bg-white shadow-xl p-8 absolute top-20 z-10 lg:left-40 opacity-60 rounded-xl">
+                        <p class="opacity-75 pb-4">We are providing the best and suitable home insurance services for
+                            the people who are interested to treatment</p>
+                        <h3 class="text-xl font-bold">Ilham Yuda</h3>
+                        <p class="opacity-75">Businessman</p>
+                        <div class="absolute bottom-[155px] -left-5 "><img class="mx-auto rounded-full shadow-2xl "
+                                src="./images/client.png" alt=""></div>
                     </div>
                 </div>
             </div>
@@ -153,11 +166,13 @@
         <section class="mt-40">
             <div class="mx-auto text-center space-y-3 lg:w-[900px]">
                 <h3 class="text-black text-4xl font-bold">News & Events</h3>
-                <p class="opacity-90">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                <p class="opacity-90">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injected humour, or randomised words which don't look even
+                    slightly believable. </p>
             </div>
             <div class="flex lg:flex-row flex-col justify-around mt-8">
                 <div class="space-y-2 p-4 shadow-xl rounded-2xl">
-                    <figure><img  class="w-full" src="./images/news-1.png" alt=""></figure>
+                    <figure><img class="w-full" src="./images/news-1.png" alt=""></figure>
                     <figcaption>Feb 05,2027</figcaption>
                     <h3 class="text-xl font-bold">Collecting 8 points for discount</h3>
                     <p class="opacity-80">There are many variations of passages of Lorem Ipsum available.</p>
@@ -180,8 +195,48 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="bg-base-200 mt-32 ">
+        <div class="flex lg:flex-row flex-col gap-4 justify-between container mx-auto pt-10 my-10">
+            <div class="lg:translate-x-8"><img src="./images/cup.png" alt=""></div>
+            <div class="flex lg:flex-row flex-col gap-3 items-start lg:items-center lg:-translate-x-80">
+                <p class="text-xl">Ready to get started?</p>
+                <button class=" btn text-white text bg-gradient-to-r from-end to-prior">Get Started</button>
+            </div>
+        </div>
+        <section class="container mx-auto footer p-10 text-base-content">
 
+            <nav>
+                <header class="footer-title">Services</header>
+                <a class="link link-hover">Branding</a>
+                <a class="link link-hover">Design</a>
+                <a class="link link-hover">Marketing</a>
+                <a class="link link-hover">Advertisement</a>
+            </nav>
+            <nav>
+                <header class="footer-title">Company</header>
+                <a class="link link-hover">About us</a>
+                <a class="link link-hover">Contact</a>
+                <a class="link link-hover">Jobs</a>
+                <a class="link link-hover">Press kit</a>
+            </nav>
+            <nav>
+                <header class="footer-title">Legal</header>
+                <a class="link link-hover">Terms of use</a>
+                <a class="link link-hover">Privacy policy</a>
+                <a class="link link-hover">Cookie policy</a>
+            </nav>
+            <form>
+                <fieldset class="form-control w-80">
+                    <div class="space-y-4">
+                        <h3 class="text-lg text-black font-medium">Subscribe to Our Newsletter</h3>
+                        <input type="text" placeholder="username@site.com"
+                            class="input border-0 border-b-2 rounded-sm border-black " />
+                        <button class="btn rounded-full bg-gradient-to-r from-end to-prior join-item"><i
+                                class="fa-solid fa-chevron-right" style=""></i></button>
+                    </div>
+                </fieldset>
+            </form>
+        </section>
     </footer>
 </body>
 
